test/runnable/operator-precedence.nz.model.tata
module(
	path: 50
	imports: [import(none, 35, none), import(some(range(8, 16)), 26, some([print])), import(some(range(25, 35)), 47, some([exit-code]))]
	exports: []
	structs: []
	specs: []
	funs: [
		fun(
			public?: true
			summon: true
			sig: sig(file-pos(50, 48), main, fut(int32()), [param(file-range(50, range(67, 76)), none, arr(arr(char())))])
			body: seq(
				seq(
					call(
						fun-inst(name: print)
						[
							call(
								fun-inst(name: to-str)
								[
									call(
										fun-inst(name: *)
										[
											literal(nat(), 1)
											call(fun-inst(name: +), [literal(nat(), 2), literal(nat(), 3)])])])])
					call(
						fun-inst(name: print)
						[
							call(
								fun-inst(name: to-str)
								[
									call(
										fun-inst(name: +)
										[
											literal(nat(), 1)
											call(fun-inst(name: *), [literal(nat(), 2), literal(nat(), 3)])])])]))
				call(fun-inst(name: resolved, type-args: [int32()]), [literal(int32(), 0)])))])
