test/parse-errors/when-without-else.nz.ast.tata
file-ast(
	imports: []
	exports: []
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(0, 8), name-range(range(0, 1), f), inststruct(range(2, 6), name-range(range(2, 6), void)), [])
			body: when([], none))])
